Aula 77 - ajustei a ShoppingViewController, TaxesCalculator e Storyboard,  parte 8

--- a/ComprasUSA/Base.lproj/Main.storyboard
+++ b/ComprasUSA/Base.lproj/Main.storyboard
@@ -250,7 +250,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flag" translatesAutoresizingMaskIntoConstraints="NO" id="Qis-jX-GNl">
-                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vxK-aw-zf0">
                                 <rect key="frame" x="0.0" y="347" width="414" height="202"/>
@@ -374,10 +374,10 @@
                             <constraint firstItem="Qis-jX-GNl" firstAttribute="leading" secondItem="bPf-Le-bB2" secondAttribute="leading" id="3M9-Z7-WGW"/>
                             <constraint firstItem="vxK-aw-zf0" firstAttribute="leading" secondItem="bPf-Le-bB2" secondAttribute="leading" id="5P2-HD-J7E"/>
                             <constraint firstItem="vxK-aw-zf0" firstAttribute="trailing" secondItem="bPf-Le-bB2" secondAttribute="trailing" id="AX1-5c-OG2"/>
+                            <constraint firstAttribute="bottom" secondItem="Qis-jX-GNl" secondAttribute="bottom" id="BlW-Yf-mpp"/>
                             <constraint firstItem="vxK-aw-zf0" firstAttribute="centerY" secondItem="9mb-MD-oyV" secondAttribute="centerY" id="Eof-sD-lXg"/>
+                            <constraint firstItem="Qis-jX-GNl" firstAttribute="top" secondItem="9mb-MD-oyV" secondAttribute="top" id="HCh-cX-yHx"/>
                             <constraint firstItem="bPf-Le-bB2" firstAttribute="trailing" secondItem="Qis-jX-GNl" secondAttribute="trailing" id="POL-dN-3oy"/>
-                            <constraint firstItem="Qis-jX-GNl" firstAttribute="top" secondItem="bPf-Le-bB2" secondAttribute="top" id="fjY-59-gJm"/>
-                            <constraint firstItem="bPf-Le-bB2" firstAttribute="bottom" secondItem="Qis-jX-GNl" secondAttribute="bottom" id="uM9-yh-rSS"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bPf-Le-bB2"/>
                     </view>
@@ -394,7 +394,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IXj-qq-cc9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2361" y="96"/>
+            <point key="canvasLocation" x="2360.8695652173915" y="95.758928571428569"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="54f-hj-TCL">
